--- a/prototype/client.html
+++ b/prototype/client.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <title>Project Positive</title>
-    <link href="main.css" ref="stylesheet">
+    <link rel="stylesheet" href="client.css">
+    <meta charset="utf-8">
   </head>
   <body>
 
-    <div id="canvas" width="400" height="640"/>
-    <!--<img src="message.svg">-->
+    <div id="compliment-container">
+      <img src="assets/backgrounds/1.png">
+      <div id="compliment"></div>
+    </div>
 
-    <script src="main.js"></script>
+    <div id="button-container">
+      <button id="sweat">sweat</button>
+      <button id="kiakaha">kiakaha</button>
+      <button id="red">red</button>
+      <button id="blue">blue</button>
+    </div>
+
+    <script src="client.js"></script>
   </body>
 </html>
