--- a/index.html
+++ b/index.html
@@ -6,30 +6,18 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '1761799850709452',
-          xfbml      : true,
-          version    : 'v2.5'
-        });
-      };
 
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-    </script>
-
-    <div
-      class="fb-like"
-      data-share="true"
-      data-width="450"
-      data-show-faces="true">
+    <!--  MAGIC FACEBOOK CODE START  -->
+    <div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="true">
+      <div class="fb-xfbml-parse-ignore">
+        <blockquote cite="https://www.facebook.com/HeyAwesome/">
+          <a href="https://www.facebook.com/HeyAwesome/">
+            Project Positive
+          </a>
+        </blockquote>
+      </div>
     </div>
+    <!--  MAGIC FACEBOOK CODE END  -->
 
   </body>
 </html>
