Get twitter feed showing on page

--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
   </head>
   <body>
 
-    <!--  MAGIC FACEBOOK CODE START  -->
-    <div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="true">
-      <div class="fb-xfbml-parse-ignore">
-        <blockquote cite="https://www.facebook.com/HeyAwesome/">
-          <a href="https://www.facebook.com/HeyAwesome/">
-            Project Positive
-          </a>
-        </blockquote>
+  <div class="feeds-div">
+
+      <!--  MAGIC FACEBOOK CODE START  -->
+      <div class="facebook-div">
+        <div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="true">
+          <div class="fb-xfbml-parse-ignore">
+            <blockquote cite="https://www.facebook.com/HeyAwesome/">
+              <a href="https://www.facebook.com/HeyAwesome/">
+                Project Positive
+              </a>
+            </blockquote>
+          </div>
+        </div>
       </div>
+      <!--  MAGIC FACEBOOK CODE END  -->
+      <div class="twitter-div">
+        <a class="twitter-timeline" href="https://twitter.com/ProjectPosNZ" data-widget-id="695385618126237696">
+          Tweets by @ProjectPosNZ
+        </a>
+      </div>
+
     </div>
-    <!--  MAGIC FACEBOOK CODE END  -->
 
   </body>
 </html>
