--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <title>Project Positive</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="index.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/instafeed.min.js"></script>
   </head>
   <body>
+    <header>
+      <h1>Project Positive</h1>
+    </header>
 
-  <div class="feeds-div">
+    <div class="feeds-div">
 
-      <!--  MAGIC FACEBOOK CODE START  -->
+      <!--  MAGIC FACEBOOK CODE -->
       <div class="facebook-div">
         <div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="true">
           <div class="fb-xfbml-parse-ignore">
@@ -21,12 +25,16 @@
           </div>
         </div>
       </div>
-      <!--  MAGIC FACEBOOK CODE END  -->
+
+      <!--  MAGIC TWITTER CODE -->
       <div class="twitter-div">
         <a class="twitter-timeline" href="https://twitter.com/ProjectPosNZ" data-widget-id="695385618126237696">
           Tweets by @ProjectPosNZ
         </a>
       </div>
+
+      <!--  MAGIC INSTAGRAM CODE -->
+      <div id="instafeed"></div>
 
     </div>
 
