Get an instagram feed showing on the page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
       </div>
 
       <!--  MAGIC INSTAGRAM CODE -->
-      <div id="instafeed"></div>
+      <div class="instagram-feed">
+        <iframe src="http://widget.websta.me/in/tag:projectpositivenz/?r=1&w=2&h=5&b=0&p=5" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:610px; height: 1525px" >
+        </iframe>
+      </div>
 
     </div>
 
