--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       </div>
 
       <!--  MAGIC INSTAGRAM CODE -->
-      <div class="instagram-feed">
-        <iframe src="http://widget.websta.me/in/tag:projectpositivenz/?r=1&w=2&h=5&b=0&p=5" allowtransparency="true" frameborder="0" scrolling="no" style="border:none;overflow:hidden;width:610px; height: 1525px" >
-        </iframe>
+      <div class="instagram-div">
+        <div id="instafeed">
+
+        </div>
       </div>
 
     </div>
