--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>Project Positive // Hey Awesome!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css" />
+    <script type="text/javascript" src="assets/js/instafeed.min.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 	</head>
 	<body class="index">
 		<div id="page-wrapper">
@@ -131,9 +134,17 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Facebook</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="false" data-hide-cover="true" data-show-facepile="true">
+						          <div class="fb-xfbml-parse-ignore">
+						            <blockquote cite="https://www.facebook.com/HeyAwesome/">
+						              <a href="https://www.facebook.com/HeyAwesome/">
+						                Project Positive
+						              </a>
+						            </blockquote>
+						          </div>
+						        </div>
 									</section>
 
 								</div>
@@ -142,9 +153,11 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Twitter</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<a class="twitter-timeline" href="https://twitter.com/ProjectPosNZ" data-widget-id="695385618126237696">
+										  Tweets by @ProjectPosNZ
+										</a>
 									</section>
 
 								</div>
@@ -153,9 +166,10 @@
 									<section>
 										<span class="icon featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Instagram</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<div id="instafeed">
+        						</div>
 									</section>
 
 								</div>
