Update twitter feed to display hashtags instead of user profile

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 										<header>
 											<h3>Twitter</h3>
 										</header>
-										<a class="twitter-timeline" href="https://twitter.com/ProjectPosNZ" data-widget-id="695385618126237696">
-										  Tweets by @ProjectPosNZ
+										<a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositive%20OR%20%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness" data-widget-id="696444575154462720">
+											Tweets about #projectpositive #projectpositivenz #chainofpositivity #nationalcomplimentsday #21daysofkindness
 										</a>
 									</section>
 
