get five different hashtags displaying in the instagram div

--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
                       <h3>Instagram</h3>
                     </header>
                     <div id="instafeed">
+                      <div id="instafeed-projectpositive">
+                      </div>
+                      <div id="instafeed-projectpositivenz">
+                      </div>
+                      <div id="instafeed-chainofpositivity">
+                      </div>
+                      <div id="instafeed-nationalcomplimentsday">
+                      </div>
+                      <div id="instafeed-21daysofkindness">
+                      </div>
                     </div>
                   </section>
 
