hack instafeed and get multiple hashtag photos to disply in one div

--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
                     <header>
                       <h3>Instagram</h3>
                     </header>
-                    <div id="instafeed">
-                      <div id="instafeed-projectpositive">
+                    <div class="instagram-feed" id="instafeed">
+<!--                       <div class="instagram-tag" id="instafeed-projectpositive">
                       </div>
-                      <div id="instafeed-projectpositivenz">
+                      <div class="instagram-tag" id="instafeed-projectpositivenz">
                       </div>
-                      <div id="instafeed-chainofpositivity">
+                      <div class="instagram-tag" id="instafeed-chainofpositivity">
                       </div>
-                      <div id="instafeed-nationalcomplimentsday">
+                      <div class="instagram-tag" id="instafeed-nationalcomplimentsday">
                       </div>
-                      <div id="instafeed-21daysofkindness">
-                      </div>
+                      <div class="instagram-tag" id="instafeed-21daysofkindness">
+                      </div> -->
                     </div>
 
               </header>
