find instafeed div width when window width changes

--- a/index.html
+++ b/index.html
@@ -102,17 +102,7 @@
                     <header>
                       <h3>Instagram</h3>
                     </header>
-                    <div class="instagram-feed" id="instafeed">
-<!--                       <div class="instagram-tag" id="instafeed-projectpositive">
-                      </div>
-                      <div class="instagram-tag" id="instafeed-projectpositivenz">
-                      </div>
-                      <div class="instagram-tag" id="instafeed-chainofpositivity">
-                      </div>
-                      <div class="instagram-tag" id="instafeed-nationalcomplimentsday">
-                      </div>
-                      <div class="instagram-tag" id="instafeed-21daysofkindness">
-                      </div> -->
+                    <div id="instafeed">
                     </div>
 
               </header>
