--- a/index.html
+++ b/index.html
@@ -22,30 +22,11 @@
 
       <!-- Header -->
         <header id="header" class="alt">
-          <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+          <h1 id="logo"><a href="/">Project Positive</a></h1>
           <nav id="nav">
             <ul>
-              <li class="current"><a href="index.html">Welcome</a></li>
-              <li class="submenu">
-                <a href="#">Layouts</a>
-                <ul>
-                  <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                  <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                  <li><a href="no-sidebar.html">No Sidebar</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li class="submenu">
-                    <a href="#">Submenu</a>
-                    <ul>
-                      <li><a href="#">Dolore Sed</a></li>
-                      <li><a href="#">Consequat</a></li>
-                      <li><a href="#">Lorem Magna</a></li>
-                      <li><a href="#">Sed Magna</a></li>
-                      <li><a href="#">Ipsum Nisl</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li><a href="#" class="button special">Sign Up</a></li>
+              <li class="current"><a href="index.html">Original Project Positive Site</a></li>
+              <li class="current"><a href="index.html">Chain of Positivity</a></li>
             </ul>
           </nav>
         </header>
@@ -62,7 +43,7 @@
           <div class="inner">
 
             <header>
-              <h2>TWENTY</h2>
+              <h2>PROJECT POSITIVE</h2>
             </header>
             <p>This is <strong>Twenty</strong>, a free
             <br />
@@ -254,15 +235,13 @@
         <footer id="footer">
 
           <ul class="icons">
-            <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-            <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-            <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+            <li><a href="https://twitter.com/ProjectPosNZ" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://www.facebook.com/HeyAwesome/" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="https://www.instagram.com/projectpositivenz/" class="icon circle fa-instagram"><span class="label">Instagram</span></a></li>
           </ul>
 
           <ul class="copyright">
-            <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; 2016 Project Positive</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
 
         </footer>
