remove projectpositive hashtag from twitter feed

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <header>
                       <h3>Twitter</h3>
                     </header>
-                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness" data-widget-id="696444575154462720">
-                      Tweets about #projectpositivenz #chainofpositivity #nationalcomplimentsday #21daysofkindness
+                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness" data-widget-id="696651554133118976">
+                      Tweets about #projectpositivenz OR #chainofpositivity OR #nationalcomplimentsday OR #21daysofkindness
                     </a>
                   </section>
 
