make social media headings links

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <header class="major">
                 <h2>Check out our social media feeds</h2>
                 <header>
-                  <h3>Instagram</h3>
+                  <a href="https://www.instagram.com/projectpositivenz/"><h3>Instagram</h3></a>
                 </header>
                 <div id="instafeed">
                 </div>
@@ -90,7 +90,7 @@
                 <div class="6u 12u(narrower)">
                   <section>
                     <header>
-                      <h3>Facebook</h3>
+                      <a href="https://www.facebook.com/HeyAwesome/"><h3>Facebook</h3></a>
                     </header>
                     <div class="fb-page" data-href="https://www.facebook.com/HeyAwesome/" data-tabs="timeline" data-height="2000" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true">
                       <div class="fb-xfbml-parse-ignore">
@@ -107,7 +107,7 @@
                 <div class="6u 12u(narrower)">
                   <section>
                     <header>
-                      <h3>Twitter</h3>
+                      <a href="https://twitter.com/ProjectPosNZ"><h3>Twitter</h3></a>
                     </header>
                     <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness" data-widget-id="696651554133118976">
                       Tweets about #projectpositivenz OR #chainofpositivity OR #nationalcomplimentsday OR #21daysofkindness
