add top section copy

--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
           <div class="inner">
 
             <header>
-              <h2>PROJECT POSITIVE</h2>
+              <h2>
+                PROJECT
+                <br />
+                POSITIVE
+              </h2>
             </header>
-            <p>Maybe some words about <strong>Project Positive</strong>
-            <br />
-            in this box here?
-            <br />
-            and <a href="http://html5up.net">a link perhaps</a>?</p>
-            <footer>
-              <ul class="buttons vertical">
-                <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
-              </ul>
-            </footer>
-
+            <p>
+              Hey You,
+              <br />
+              <strong>You're Awesome!</strong>
+              <br />
+              Pass It On!
+            </p>
           </div>
 
         </section>
