add second section copy

--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
                 POSITIVE
               </h2>
             </header>
-            <p>
-              Hey You,
-              <br />
-              <strong>You're Awesome!</strong>
-              <br />
-              Pass It On!
-            </p>
           </div>
 
         </section>
@@ -64,12 +57,12 @@
         <article id="main">
 
           <header class="special container">
-            <h2>Words about <strong>Project Positive 2016,</strong> yeah!</h2>
+            <h2>Hey You, <strong>You're Awesome!</strong> Pass It On!</h2>
             <p>
-              Words here need an html br tag
-              <br />
-              to create new lines
-              <br />
+              Project Positive is a youth driven movement promoting positivity online and off. We all have the power to make someone’s day brighter!  One person at a time, we can play our part and connect our efforts to make a real difference.
+            </p>
+            <p>
+              Our aim is a much more positive and safer internet for generations of internet users so that they can use the power of the internet to learn, play, meet, create, and make use of the amazing things the internet has to offer without having to worry about negativity.
             </p>
           </header>
 
