add copy and image to section 3

--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
             </p>
           </header>
 
+          <!-- One -->
+            <section class="wrapper style2 container special-alt">
+              <div class="row 50%">
+                <div class="8u 12u(narrower)">
+                  <header>
+                    <h2>Get Involved!</h2>
+                  </header>
+                  <p>
+                    <strong>National Compliments Day - February 9th</strong>
+                    <br />
+                    Share any of our compliments (or even some of your own) from the <a href="https://www.facebook.com/media/set/?set=a.838741226248804.1073741830.814383118684615&type=1&l=4e8f1413bf">shared Facebook album.</a>
+                  </p>
+                  <footer>
+                    <ul class="buttons">
+                      <li><a href="#" class="button">Find Out More</a></li>
+                    </ul>
+                  </footer>
+
+                </div>
+                <div class="4u 12u(narrower) important(narrower)">
+                  <img src="images/all.png" class="image fit">
+                </div>
+              </div>
+            </section>
+
           <!-- Feeds -->
             <section class="wrapper style3 container special">
 
