Make site NZ specific

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 
       <!-- Header -->
         <header id="header" class="alt">
-          <h1 id="logo"><a href="/">Project Positive</a></h1>
           <nav id="nav">
             <ul>
-              <li class="current"><a href="http://project-positive.org/">Original Project Positive Site</a></li>
+              <li class="current"><a href="http://project-positive.org/">Main Project Positive Site</a></li>
               <li class="current"><a href="http://chainofpositivity.org/">Chain of Positivity</a></li>
             </ul>
           </nav>
@@ -43,9 +42,9 @@
           <div class="inner">
 
             <header>
-              <h2>PROJECT POSITIVE</h2>
+              <h2>PROJECT POSITIVE NZ</h2>
             </header>
-            <p>Maybe some words about <strong>Project Positive</strong>
+            <p>Maybe some words about <strong>Project Positive NZ</strong>
             <br />
             in this box here?
             <br />
@@ -203,7 +202,7 @@
           </ul>
 
           <ul class="copyright">
-            <li>&copy; 2016 Project Positive</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; 2016 Project Positive NZ</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
 
         </footer>
