add sponsors at bottom and more copy on get involved section

--- a/index.html
+++ b/index.html
@@ -66,31 +66,6 @@
             </p>
           </header>
 
-          <!-- One -->
-            <section class="wrapper style2 container special-alt">
-              <div class="row 50%">
-                <div class="8u 12u(narrower)">
-                  <header>
-                    <h2>Get Involved!</h2>
-                  </header>
-                  <p>
-                    <strong>National Compliments Day - February 9th</strong>
-                    <br />
-                    Share any of our compliments (or even some of your own) from the <a href="https://www.facebook.com/media/set/?set=a.838741226248804.1073741830.814383118684615&type=1&l=4e8f1413bf">shared Facebook album.</a>
-                  </p>
-                  <footer>
-                    <ul class="buttons">
-                      <li><a href="#" class="button">Find Out More</a></li>
-                    </ul>
-                  </footer>
-
-                </div>
-                <div class="4u 12u(narrower) important(narrower)">
-                  <img src="images/all.png" class="image fit">
-                </div>
-              </div>
-            </section>
-
           <!-- Feeds -->
             <section class="wrapper style3 container special">
 
@@ -136,62 +111,33 @@
             </section>
         </article>
 
-
-          <!-- Two -->
-            <section class="wrapper style1 container special">
-              <div class="row">
-                <div class="4u 12u(narrower)">
-
-                  <section>
-                    <span class="icon featured google"></span>
-                  </section>
-
-                </div>
-                <div class="4u 12u(narrower)">
-
-                  <section>
-                    <span class="icon featured webrangers"></span>
-
-                  </section>
-
-                </div>
-                <div class="4u 12u(narrower)">
-
-                  <section>
-                    <span class="icon featured sticksnstones"></span>
-                  </section>
-
-                </div>
-              </div>
-            </section>
-
-          <!-- Stand out icon box thing -->
+          <!-- One -->
             <section class="wrapper style2 container special-alt">
               <div class="row 50%">
                 <div class="8u 12u(narrower)">
-
                   <header>
-                    <h2>In partnership with in this style?</h2>
+                    <h2>Get Involved!</h2>
                   </header>
-                  <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+                  <p>
+                    <strong>National Compliments Day - February 9th</strong>
+                    <br />
+                    Share any of our compliments (or even some of your own) from the <a href="https://www.facebook.com/media/set/?set=a.838741226248804.1073741830.814383118684615&type=1&l=4e8f1413bf">shared Facebook album.</a>
+                  </p>
                   <footer>
-                    <ul class="buttons">
-                      <li><a href="#" class="button">Find Out More</a></li>
-                    </ul>
+                    <ul>
+                      <li>Then share them across your social media using</li>
+                      <li>#projectpositivenz </li>
+                      <li>#nationalcomplimentsday </li>
+                      <li>#SID2016</li>
+
+                      <li>or tag @ProjectPositiveNZ on Facebook</li>
+                      </ul>
+                    </p>
                   </footer>
 
                 </div>
                 <div class="4u 12u(narrower) important(narrower)">
-
-                  <ul class="featured-icons">
-                    <li><span class="icon fa-facebook"><span class="label">Feature 1</span></span></li>
-                    <li><span class="icon fa-volume-up"><span class="label">Feature 2</span></span></li>
-                    <li><span class="icon fa-laptop"><span class="label">Feature 3</span></span></li>
-                    <li><span class="icon fa-inbox"><span class="label">Feature 4</span></span></li>
-                    <li><span class="icon fa-lock"><span class="label">Feature 5</span></span></li>
-                    <li><span class="icon fa-cog"><span class="label">Feature 6</span></span></li>
-                  </ul>
-
+                  <img src="images/all.png" class="image fit">
                 </div>
               </div>
             </section>
@@ -200,12 +146,19 @@
         <section id="cta">
 
           <header>
-            <h2>or In partnership with in this style?</h2>
+            <h2>In partnership with</h2>
+            <ul class="buttons">
+              <li><a href="http://www.google.com" class="logo google">Google</a></li>
+              <li><a href="http://www.sticksnstones.co.nz/" class="logo sticksnstones">Sticks 'n Stones</a></li>
+              <li><a href="https://netsafe.org.nz/webrangers/" class="logo webrangers">Web Rangers</a></li>
+              <li><a href="http://www.facebook.com/" class="logo facebook">Facebook</a></li>
+            </ul>
           </header>
           <footer>
+            <h2>Supported by</h2>
             <ul class="buttons">
-              <li><a href="http://www.google.com" class="logo google"></a></li>
-              <li><a href="#" class="button">LOL Wut</a></li>
+              <li><a href="https://www.netsafe.org.nz/" class="logo netsafe">Netsafe</a></li>
+              <li><a href="http://www.enspiral.com/" class="logo enspiral">Enspiral</a></li>
             </ul>
           </footer>
 
