--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Project Positive // Hey Awesome!</title>
+    <title>Project Positive NZ // Hey Awesome!</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,10 +22,10 @@
 
       <!-- Header -->
         <header id="header" class="alt">
-          <h1 id="logo"><a href="/">Project Positive</a></h1>
+          <h1 id="logo"><a href="/">Project Positive NZ</a></h1>
           <nav id="nav">
             <ul>
-              <li class="current"><a href="http://project-positive.org/">Original Project Positive Site</a></li>
+              <li class="current"><a href="http://project-positive.org/">Main Project Positive Site</a></li>
               <li class="current"><a href="http://chainofpositivity.org/">Chain of Positivity</a></li>
             </ul>
           </nav>
@@ -47,6 +47,8 @@
                 PROJECT
                 <br />
                 POSITIVE
+                <br />
+                NZ
               </h2>
             </header>
           </div>
@@ -174,7 +176,7 @@
           </ul>
 
           <ul class="copyright">
-            <li>&copy; 2016 Project Positive</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>&copy; 2016 Project Positive NZ</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
 
         </footer>
