change facebook to supporter

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
             </section>
         </article>
 
-          <!-- One -->
+          <!-- Get Involved -->
             <section class="wrapper style2 container special-alt">
+              <header>
+                <h2>Get Involved!</h2>
+              </header>
               <div class="row 50%">
                 <div class="8u 12u(narrower)">
-                  <header>
-                    <h2>Get Involved!</h2>
-                  </header>
                   <p>
                     <strong>National Compliments Day - February 9th</strong>
                     <br />
@@ -153,12 +153,12 @@
               <li><a href="http://www.google.com" class="logo google">Google</a></li>
               <li><a href="http://www.sticksnstones.co.nz/" class="logo sticksnstones">Sticks 'n Stones</a></li>
               <li><a href="https://netsafe.org.nz/webrangers/" class="logo webrangers">Web Rangers</a></li>
-              <li><a href="http://www.facebook.com/" class="logo facebook">Facebook</a></li>
             </ul>
           </header>
           <footer>
             <h2>Supported by</h2>
             <ul class="buttons">
+              <li><a href="http://www.facebook.com/" class="logo facebook">Facebook</a></li>
               <li><a href="https://www.netsafe.org.nz/" class="logo netsafe">Netsafe</a></li>
               <li><a href="http://www.enspiral.com/" class="logo enspiral">Enspiral</a></li>
             </ul>
