add chain of positivity copy

--- a/index.html
+++ b/index.html
@@ -134,11 +134,37 @@
 
                       <li>or tag @ProjectPositiveNZ on Facebook</li>
                       </ul>
-                    </p>
                   </footer>
                 </div>
                 <div class="4u 12u(narrower) important(narrower)">
                   <img src="images/all.png" class="image fit">
+                </div>
+              </div>
+
+              <div class="row 50%">
+                <div class="4u 12u(narrower) important(narrower)">
+                  <img src="" class="image fit">
+                </div>
+                <div class="8u 12u(narrower)">
+                  <p>
+                    <strong>Chain of Positivity</strong>
+                    <br />
+                    Visit <a href="http://chainofpositivity.org/">www.chainofpositivity.org</a> to create a paper chain to represent, like links in a chain, that we all play a part in creating a safe and happy environment.
+                    <br />
+                    Help us get the chain to travel from Christchurch to Wellington on the map.
+                    <br />
+                    You can check on progress and see how you have played your part!
+                  </p>
+                  <footer>
+                    <ul>
+                      <li>Then share them across your social media using</li>
+                      <li>#projectpositivenz </li>
+                      <li>#nationalcomplimentsday </li>
+                      <li>#SID2016</li>
+
+                      <li>or tag @ProjectPositiveNZ on Facebook</li>
+                      </ul>
+                  </footer>
                 </div>
               </div>
             </section>
