add 21 days of kindness copy

--- a/index.html
+++ b/index.html
@@ -155,18 +155,24 @@
                     <br />
                     You can check on progress and see how you have played your part!
                   </p>
-                  <footer>
-                    <ul>
-                      <li>Then share them across your social media using</li>
-                      <li>#projectpositivenz </li>
-                      <li>#nationalcomplimentsday </li>
-                      <li>#SID2016</li>
-
-                      <li>or tag @ProjectPositiveNZ on Facebook</li>
-                      </ul>
-                  </footer>
                 </div>
               </div>
+
+              <div class="row 50%">
+                <div class="8u 12u(narrower)">
+                  <p>
+                    <strong>21 Days of Kindness Challenge</strong>
+                    <br />
+                    Research tells us that it takes 21 days to form a habit, for changes to become part of your daily routine.
+                    <br />
+                    Take part in our 21 Days of Kindness Challenge on <a href="https://www.instagram.com/projectpositivenz/">Instagram</a> or on <a href="https://twitter.com/ProjectPosNZ">Twitter</a> to make kindness, gratitude and appreciation a habit and part of every day.
+                  </p>
+                </div>
+                <div class="4u 12u(narrower) important(narrower)">
+                  <img src="" class="image fit">
+                </div>
+              </div>
+
             </section>
 
       <!-- CTA -->
