add all get involved copy

--- a/index.html
+++ b/index.html
@@ -173,6 +173,35 @@
                 </div>
               </div>
 
+              <div class="row 50%">
+                <div class="4u 12u(narrower) important(narrower)">
+                  <img src="" class="image fit">
+                </div>
+                <div class="8u 12u(narrower)">
+                  <p>
+                    <strong>Get Your School Involved</strong>
+                    <br />
+                    We have some fantastic resources uploaded on <a href="http://www.pond.co.nz/community/955566/project-positive/1">Network 4 Learning’s Pond.</a>
+                    <br />
+                    This includes activities, games, resources and lesson ideas that work with younger and older students.
+                  </p>
+                </div>
+              </div>
+
+              <div class="row 50%">
+                <div class="8u 12u(narrower)">
+                  <p>
+                    <strong>Got Any Other Ideas?</strong>
+                    <br />
+                    We would love to hear from you!  Message us on <a href="https://www.facebook.com/HeyAwesome/">Facebook</a> or drop us an email at <a href="mailto:projectpositivenz@gmail.com?Subject=I%20have%20an%20awesome%20idea!" target="_top">projectpositivenz@gmail.com</a> with any ideas you have or activities you have used. We think you are awesome and would love to know more.
+
+                  </p>
+                </div>
+                <div class="4u 12u(narrower) important(narrower)">
+                  <img src="" class="image fit">
+                </div>
+              </div>
+
             </section>
 
       <!-- CTA -->
