add background copy

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   </p>
                 </div>
                 <div class="4u 12u(narrower) important(narrower)">
-                  <img src="" class="image fit">
+                  <img src="images/kindness.jpg" class="image fit">
                 </div>
               </div>
 
@@ -203,6 +203,28 @@
               </div>
 
             </section>
+
+          <!-- Background -->
+            <section class="wrapper style1 container special">
+              <div class="row">
+                <div class="">
+                  <header class="major background">
+                    <h2>Background</h2>
+                    <p>
+                    Project Positive is the creation of Tip Varnakomala, who at 17 and living in Christchurch decided that there had to be a way to promote positivity and encourage people to recognise the part they play in life online.
+                    <br />
+                    Tip’s website www.project-positive.org and his compliment generator were one of the national Web Rangers campaign winners in 2014 with Google being impressed with Tips take on how we can all make a difference.
+                    </p>
+                    <p>
+                    In 2015, Sticks ‘n Stones were given the opportunity by Google to take the Web Rangers campaigns and build on them to be part of Safer Internet Day.
+                    <br />
+                    We had no hesitation in taking Tip’s original idea and getting him on board to realise his vision of a #nationalcomplimentsday and a movement across the country that could turn the happy dial to full blast for a platform of giving and receiving compliments for no better reason than it feels great!
+                    </p>
+                  </header>
+                </div>
+              </div>
+            </section>
+
 
       <!-- CTA -->
         <section id="cta">
