add sid2016 hashtag to twitter feed

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     <header>
                       <a href="https://twitter.com/ProjectPosNZ"><h3>Twitter</h3></a>
                     </header>
-                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness" data-widget-id="696651554133118976">
-                      Tweets about #projectpositivenz OR #chainofpositivity OR #nationalcomplimentsday OR #21daysofkindness
+                    <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23projectpositivenz%20OR%20%23chainofpositivity%20OR%20%23nationalcomplimentsday%20OR%20%2321daysofkindness%20OR%20%23SID2016" data-widget-id="696843509232349184">
+                      Tweets about #projectpositivenz OR #chainofpositivity OR #nationalcomplimentsday OR #21daysofkindness OR #SID2016
                     </a>
                   </section>
                 </div>
