add sponsor logos

--- a/index.html
+++ b/index.html
@@ -225,27 +225,34 @@
               </div>
             </section>
 
-
-      <!-- CTA -->
+      <!-- Credits -->
         <section id="cta">
-
-          <header>
-            <h2>In partnership with</h2>
-            <ul class="buttons">
-              <li><a href="http://www.google.com" class="logo google">Google</a></li>
-              <li><a href="http://www.sticksnstones.co.nz/" class="logo sticksnstones">Sticks 'n Stones</a></li>
-              <li><a href="https://netsafe.org.nz/webrangers/" class="logo webrangers">Web Rangers</a></li>
-            </ul>
-          </header>
-          <footer>
-            <h2>Supported by</h2>
-            <ul class="buttons">
-              <li><a href="http://www.facebook.com/" class="logo facebook">Facebook</a></li>
-              <li><a href="https://www.netsafe.org.nz/" class="logo netsafe">Netsafe</a></li>
-              <li><a href="http://www.enspiral.com/" class="logo enspiral">Enspiral</a></li>
-            </ul>
-          </footer>
-
+          <div class="credits">
+            <h2>In partnership with:</h2>
+            <div class="partners">
+              <div class="partner">
+                <a href="http://www.google.com" class="logo google"><img src="images/logos/google.png" class="logo google"></a>
+              </div>
+              <div class="partner">
+                <a href="http://www.sticksnstones.co.nz/" class="logo sticksnstones"><img src="images/logos/sticksnstones.jpg" class="logo sticksnstones"></a>
+              </div>
+              <div class="partner">
+                <a href="https://netsafe.org.nz/webrangers/" class="logo webrangers"><img src="images/logos/webrangers.jpg" class="logo webrangers"></a>
+              </div>
+            </div>
+            <h2>Supported by:</h2>
+            <div class="supporters">
+              <div class="supporter">
+                <a href="http://www.facebook.com/" class="logo facebook"><img src="images/logos/facebook.png" class="logo facebook"></a>
+              </div>
+              <div class="supporter">
+                <a href="https://www.netsafe.org.nz/" class="logo netsafe"><img src="images/logos/netsafe.png" class="logo netsafe"></a>
+              </div>
+              <div class="supporter">
+                <a href="http://www.enspiral.com/" class="logo enspiral"><img src="images/logos/enspiral.png" class="logo enspiral"></a>
+              </div>
+            </div>
+          </div>
         </section>
 
       <!-- Footer -->
